--- a/boardgame.html
+++ b/boardgame.html
@@ -766,7 +766,7 @@
                     if (this.count + add >= 20) {
                         this.returnWalk = "back";
                         this.before = this.count;
-                        this.count = 20 - (this.count + add - 20);
+                        this.count = 20 - ((this.count + add) - 20);
                         this.index = this.count - 1;
                     } else {
                         this.before = this.count;
@@ -774,7 +774,12 @@
                         this.index = this.count - 1;
                     }
                     document.querySelector('#pos' + this.before).innerHTML = '';
-                    document.querySelector('#pos' + this.count).innerHTML = '<img src="img/character/c1.svg" class="character bounce">';
+                    if (this.count >= 8 && this.count <= 16) {
+                        document.querySelector('#pos' + this.count).innerHTML = '<img src="img/character/c2.svg" class="character bounce">';
+                    } else {
+                        document.querySelector('#pos' + this.count).innerHTML = '<img src="img/character/c1.svg" class="character bounce">';
+
+                    }
 
                     if (this.count > 0 && !this.checkPoint.includes(this.index)) {
                         console.log(this.checkPoint.includes(this.index))
@@ -797,7 +802,11 @@
                         this.index = this.count - 1;
                     }
                     document.querySelector('#pos' + this.before).innerHTML = '';
-                    document.querySelector('#pos' + this.count).innerHTML = '<img src="img/character/c1.svg" class="character bounce">';
+                    if (this.count >= 8 && this.count <= 16) {
+                        document.querySelector('#pos' + this.count).innerHTML = '<img src="img/character/c2.svg" class="character bounce">';
+                    } else {
+                        document.querySelector('#pos' + this.count).innerHTML = '<img src="img/character/c1.svg" class="character bounce">';
+                    }
 
                     if (this.count > 0 && !this.checkPoint.includes(this.index)) {
                         console.log(this.checkPoint.includes(this.index))
@@ -817,7 +826,7 @@
 
             roll: function() {
                 const ROLLING_NUMBER = 5;
-                // var randomNumber = 6;
+                // var randomNumber = 4;
                 var randomNumber = Math.floor(Math.random() * 6) + 1;
 
                 //Set value
