--- a/boardgame.html
+++ b/boardgame.html
@@ -292,7 +292,8 @@
                                     <h1 class="myScore fz_600 center_dis fz_700">{{ point }}</h1>
                                     <br>
                                     <hr>
-                                    <h5 class="fz_300 center_dis mt-2">นี่คือ Badge ทั้งหมดที่คุณได้รับ</h5>
+                                    <h5 class="fz_700 center_dis mt-2">นี่คือ Badge ทั้งหมดที่คุณได้รับ</h5>
+                                    <p class="ci3 center_dis">(กดที่ Badge ที่คุณได้รับเพื่ออ่านข้อมูลเพิ่มเติม)</p>
                                     <br>
                                 </div>
                                 <div class="col-2"></div>
@@ -384,8 +385,8 @@
             count: 0,
             index: 0,
             dice: 0,
-            token: 230,
-            tokenState: '230',
+            token: 250,
+            tokenState: '250',
             investState: '',
             popupStatus: 0,
             point: 0,
