--- a/boardgame.html
+++ b/boardgame.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="myBg">
+<body class="myBg" style="display: flex !important;">
     <?xml version="1.0" encoding="utf-8"?>
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 800 600" style="enable-background:new 0 0 800 600;" xml:space="preserve">
         <defs>
@@ -419,7 +419,7 @@
                 id: 2,
                 name: "Neuralink",
                 result: "ตอนนี้คุณได้พัฒนาชิปสั่งการผ่านสื่อประสาทสมอง ทำให้สามารถช่วยเหลือผู้ป่วยที่สูญเสียการควบคุม",
-                details: "พัฒนาระบบเส้นสื่อประสาทที่เชื่อมระหว่างสมองของคนเข้ากับชิปคอมพิวเตอร์ และสามารถแปลงความต้องการหรือคำสั่งของสมองออกมาให้กลายเป็นการกระทำ สามารถปลูกถ่ายให้กับผู้ป่วยอัมพาต ผู้ป่วยโรคหลอดเลือดสมอง ผู้ป่วยโรคมะเร็ง หรือผู้ป่วยโรคอื่นๆ ที่สูญเสียการควบคุมร่างกาย",
+                details: "พัฒนาระบบเส้นสื่อประสาทที่เชื่อมระหว่างสมองของคนเข้ากับชิปคอมพิวเตอร์ และสามารถแปลงความต้องการหรือคำสั่งของสมองออกมาให้กลายเป็นการกระทำ สามารถปลูกถ่ายให้กับผู้ป่วยอัมพาต ผู้ป่วยโรคหลอดเลือดสมอง ผู้ป่วยโรคมะเร็ง หรือผู้ป่วยโรคอื่น ๆ ที่สูญเสียการควบคุมร่างกาย",
                 token: "20",
                 state: "Good",
                 points: 200,
@@ -827,7 +827,7 @@
 
             roll: function() {
                 const ROLLING_NUMBER = 5;
-                // var randomNumber = 4;
+                // var randomNumber = 19;
                 var randomNumber = Math.floor(Math.random() * 6) + 1;
 
                 //Set value
