--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </h1>
                 <br>
                 <a href="boardgame.html">
-                    <button class="fz_700 btn neumorphic-btn green">เริ่มเกม</button>
+                    <button class="fz_700 introButton pointer">เริ่มเกม</button>
                 </a>
             </div>
         </div>
