--- a/boardgame.html
+++ b/boardgame.html
@@ -801,8 +801,8 @@
 
             roll: function() {
                 const ROLLING_NUMBER = 5;
-                var randomNumber = 5;
-                // var randomNumber = Math.floor(Math.random() * 6) + 1;
+                // var randomNumber = 5;
+                var randomNumber = Math.floor(Math.random() * 6) + 1;
 
                 //Set value
                 const setVal = (num) => {
